--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
     init:
       data-locations:
         - classpath:db/table.sql
-#        - classpath:db/data.sql
+        - classpath:db/data.sql
 
         
                
