--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,15 @@ dependencies {
     // 이메일 인증
     implementation 'org.springframework.boot:spring-boot-starter-mail'
   	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  	
+  	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs
+  	// 시큐리티 태그립
+	implementation 'org.springframework.security:spring-security-taglibs:6.2.2'
+  	
+  	//    Todo : json web token
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 
 tasks.named('test') {
