에러 페이지 1차

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,11 @@ server:
   error:
     include-exception: TRUE
     include-stacktrace: ALWAYS
-    whitelabel.enabled : false
+    whitelabel.enabled : true
+    path: /error
+    include-binding-errors: ALWAYS
+    
+    
   servlet:
     encoding:
       charset: utf-8
