--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     // email
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
     
+   	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-client
+   	// 소셜 로그인
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.2'
     
 }
 
