--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,11 +20,11 @@ spring:
     multipart:
       max-file-size: 20MB
       max-request-size: 20MB      
-  datasource:
-    url: jdbc:mysql://13.211.47.78:3306/placeStation?serverTimeZone=Asia/Seoul
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: Sa1953vb!
+#  datasource:
+#    url: jdbc:mysql://13.211.47.78:3306/placeStation?serverTimeZone=Asia/Seoul
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: Sa1953vb!
   mail:
     host: smtp.gmail.com
     port: 587
@@ -74,19 +74,19 @@ spring:
             client-name: naver
 
 
-#  datasource:    
-#    url: jdbc:h2:mem:testdb;MODE=MySQL
-#    driver-class-name: org.h2.Driver
-#    username: user # 유저 이름
-#    password: # 비밀번호 (비워두면 비밀번호 X)
-#  h2:
-#    console:
-#      enabled: true
-#  sql:
-#    init:
-#      data-locations:
-#        - classpath:db/table.sql
-#        - classpath:db/data.sql
+  datasource:    
+    url: jdbc:h2:mem:testdb;MODE=MySQL
+    driver-class-name: org.h2.Driver
+    username: user # 유저 이름
+    password: # 비밀번호 (비워두면 비밀번호 X)
+  h2:
+    console:
+      enabled: true
+  sql:
+    init:
+      data-locations:
+        - classpath:db/table.sql
+        - classpath:db/data.sql
 
 
 
